test real images (#666)
* test real images

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* fix psalm

* fix more tests

* multiple interactions fix

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* don't run unit tests with php 8.0

* cs fix

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* do not set PACK_MOCK_SERVER_PORT in phpunit

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* add guzzlehttp - 7.9 on composer json and update composer lock

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* CI/run the phpunit test on Php 8.0

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* CI/pass psalm for 8.0

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

---------

Signed-off-by: Artur Neumann <artur@jankaritech.com>
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>
Co-authored-by: nabim777 <nabinalemagar019@gmail.com>
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -69,13 +69,25 @@ jobs:
 
       - name: Install PHP Dependencies
         run: |
+          # The following if block can be removed once Nextcloud no longer supports PHP 8.0
+          if [ "${{matrix.phpVersion}}" -eq 8 ]; then
+            # Composer updated to php 8.0 with pact 7.1 because pact 10.0.0-beta2 is incompatible with php 8.0.
+            sed -i 's/10.0.0-beta2/7.1/g' composer.json
+            composer update
+          fi
           composer install --no-progress --prefer-dist --optimize-autoloader
           git clone --depth 1 https://github.com/nextcloud/server.git -b ${{ matrix.nextcloudVersion }}
           cd server && git submodule update --init
           ./occ maintenance:install --admin-pass=admin
 
       - name: PHP code analysis
-        run: make psalm
+        run: |
+          # The following if block can be removed once Nextcloud no longer supports PHP 8.0
+          if [ "${{matrix.phpVersion}}" -eq 8 ]; then
+            # Ignoring the pact test for php 8.0
+            sed -i '/<ignoreFiles>/a \ <file name="tests/lib/Service/OpenProjectAPIServiceTest.php"/>' psalm.xml
+          fi
+          make psalm
 
       - name: PHP code style
         run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
@@ -98,7 +110,14 @@ jobs:
           ./occ a:e groupfolders
           ./occ a:e integration_openproject
           cd apps/integration_openproject
-          make phpunit
+          # The following if block can be removed once Nextcloud no longer supports PHP 8.0
+          if [ "${{matrix.phpVersion}}" -eq 8 ]; then
+            # add PACT_MOCK_SERVER_PORT env needed for the pact 7.1 with php 8.0
+            sed -i '/<php>/a \ <env name="PACT_MOCK_SERVER_PORT" value="7200"/>' phpunit.xml
+            make phpunitforphp8.0
+          else
+            make phpunit
+          fi
           make jsunit
 
       - name: JS Code Coverage Summary Report
