test real images (#666)
* test real images

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* fix psalm

* fix more tests

* multiple interactions fix

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* don't run unit tests with php 8.0

* cs fix

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* do not set PACK_MOCK_SERVER_PORT in phpunit

Signed-off-by: Artur Neumann <artur@jankaritech.com>

* add guzzlehttp - 7.9 on composer json and update composer lock

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* CI/run the phpunit test on Php 8.0

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* CI/pass psalm for 8.0

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

---------

Signed-off-by: Artur Neumann <artur@jankaritech.com>
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>
Co-authored-by: nabim777 <nabinalemagar019@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,23 @@
 {
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
-		"pact-foundation/pact-php": "^7.1",
+		"pact-foundation/pact-php": "^10.0.0-beta2",
 		"friendsofphp/php-cs-fixer": "^3.5",
 		"nextcloud/coding-standard": "^1.0",
 		"behat/behat": "^3.10",
 		"helmich/phpunit-json-assert": "^3.4",
-		"vimeo/psalm": "5.23.1"
+		"vimeo/psalm": "5.23.1",
+		"guzzlehttp/guzzle": "^7.9"
 	},
 	"scripts": {
 		"cs:fix": "php-cs-fixer fix",
 		"cs:check": "php-cs-fixer fix --dry-run --diff"
 	},
 	"config": {
+		"allow-plugins": {
+			"phpstan/extension-installer": true,
+			"tienvx/composer-downloads-plugin": true,
+			"pact-foundation/composer-downloads-plugin": true
+		}
 	}
 }
