--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -183,7 +183,7 @@ jobs:
         nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
         phpVersionMajor: [ 8 ]
         phpVersionMinor: [ 0, 1, 2, 3 ]
-        database: [mysql]
+        database: [pgsql, mysql]
         isScheduledEventNightly:
           - ${{github.event_name == 'schedule'}}
         exclude:
