--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Style Lint
         run: npm run stylelint
 
-      - name: PHP & Vue Unit Tests
+      - name: PHP Unit Tests
         run: |
           git clone --depth 1 https://github.com/nextcloud/groupfolders.git -b ${{ matrix.nextcloudVersion }} server/apps/groupfolders
           mkdir -p server/apps/integration_openproject
@@ -110,12 +110,28 @@ jobs:
           ./occ a:e groupfolders
           ./occ a:e integration_openproject
           cd apps/integration_openproject
-          # The following if block can be removed once Nextcloud no longer supports PHP 8.0
-          if [ "${{matrix.phpVersion}}" -eq 8 ]; then
-            make phpunitforphp8.0
-          else
-            make phpunit
-          fi
+          pwd
+          ls -l
+
+      - name: Re Run PHPUnit Tests
+        uses: nick-fields/retry@v3
+        with:
+          max_attempts: 2
+          timeout_minutes: 5
+          command: |
+            pwd
+            ls -l
+            echo "Starting PHPUnit tests. Attempt ${{ steps.retry.outputs.attempt_number }}"
+            if [ "${{ matrix.phpVersion }}" -eq 8 ]; then
+              make phpunitforphp8.0
+            else
+              make phpunit
+            fi
+
+      - name: Vue Unit Tests
+        run: |
+          pwd
+          ls -l
           make jsunit
 
       - name: JS Code Coverage Summary Report
