add ocs endpoint on groupfolder on tests
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -204,7 +204,7 @@ jobs:
             phpVersionMajor: 8
             phpVersionMinor: 1
             database: mysql
-          - nextcloudVersion: stable30
+          - nextcloudVersion: master
             phpVersionMajor: 8
             phpVersionMinor: 3
             database: mysql
